# name_reconstruction

./: .gitignore  .gitmodules  README.md  llms.txt  pyproject.toml  requirements.txt  tests.md
batch_jobs/: run_llm_test2.job
c_files/: test.c
misc_tests/: arce.py  ghidra_test.py  llm_test.py  llm_test2.py  llm_test3.py
name_reconstruction/: llm_test.py  parse_names.py  prompt_generator.py  requirements.txt  test2.json  test3.json
notes/: algunos_outputs.md
prompts/: cot_base.txt  cot_example.txt
sources/c_files/: year.c
