[tool.poetry]
name = "name_reconstruction"
version = "0.1.0"
description = ""
authors = ["sergio <sergiod.roddj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pycparser = "^2.21"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transformers = "^4.34.1"

[tool.poetry.scripts]
parse_names = "name_reconstruction.parse_names:main"
llm_test = "name_reconstruction.llm_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
